Co-authored-by: Project-Dumb <Project-Dumb@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
                     <p class="text">Argentina</p>
             </div>
     <div>
+        <div class="form">
+        <form action="https://httpbin.org/post" method="post">
+            <label for="First_Name">First name</label>
+            <input type="text" id="First_Name" placeholder="Lionel">
+            <label for="Last_Name">First name</label>
+            <input type="text" id="Last_Name" placeholder="Messi">
+        I consent to this information being used in any way. <input type="checkbox" id="myCheck" name="checked" required>
+        <input type="submit">
+      </form>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
