--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
         <div class="Argentina">
             <div class="logo"> 
-                    <img src="G.png">
+                    <img src="thad.png">
                     <p class="text">Argentina</p>
             </div>
     <div>
