--- a/index.html
+++ b/index.html
@@ -21,12 +21,25 @@
         <form action="https://httpbin.org/post" method="post">
             <label for="First_Name">First name</label>
             <input type="text" id="First_Name" placeholder="Lionel">
-            <label for="Last_Name">First name</label>
+            <label for="Last_Name">Last Name</label>
             <input type="text" id="Last_Name" placeholder="Messi">
         I consent to this information being used in any way. <input type="checkbox" id="myCheck" name="checked" required>
         <input type="submit">
       </form>
-    </div>
+    <form action="#" method="get">
+        <div>
+          <label for="user_email">*Email:</label>
+          <input type="email" id="user_email" name="user_email" required>
+        </div>
+        <br>
+      
+        <div>
+          <label for="user_password">*Password:</label>
+          <input type="password" id="user_password" name="user_password" required>
+        </div>
+      
+        <button type="submit">Login</button>
+      </form>
     <script src="script.js"></script>
 </body>
 </html>
